Fixed navbar anchor alignment

--- a/resume/css/resumestyle.css
+++ b/resume/css/resumestyle.css
@@ -62,6 +62,12 @@
 .glyph-lite {
   color: #c7c7c7;
 }
+a.anchor {
+  display: block;
+  position: relative;
+  top: -50px;
+  visibility: hidden;
+}
 .section h2 {
   color: #333333;
 }
